--- a/docker.yaml
+++ b/docker.yaml
@@ -9,20 +9,15 @@ services:
       networks: 
         - unisal
       tty: true  
-
-    geoserver-slave-01:
-      image: terrabrasilis-geoserver:v01
-      container_name: geoserver-slave-node-01
-      hostname: geoserver-slave-node-01
+    
+    tomcat_web:
+      image: jetherrodrigues/my_tomcat:v2
+      container_name: tomcat
+      hostname: tomcat
       ports:
-        - "10081:8080"
+        - "10180:8080"
       networks: 
-          - terrabrasilis      
-      #entrypoint: ['bash']
-      #environment:
-      #   - DEBUG=true
-      volumes: 
-        - /data/geoserver:/data/geoserver
+          - unisal
       tty: true
 
 networks: 
