enable just the standalone tomcat

--- a/docker.yaml
+++ b/docker.yaml
@@ -19,18 +19,20 @@ services:
       networks: 
           - unisal
       tty: true
+      depends_on:
+        - postgresql_db
 
-    tomcat_web_app:
-      image: jetherrodrigues/my_app_tomcat:v1
-      environment:
-        - APPLICATION_LINK_WAR=https://github.com/aulas-unisal/docker/blob/master/application_2/example.war
-      container_name: tomcat_app
-      hostname: tomcat_app
-      ports:
-        - "15200:8080"
-      networks: 
-          - unisal
-      tty: true
+    # tomcat_web_app:
+    #   image: jetherrodrigues/my_app_tomcat:v1
+    #   environment:
+    #     - APPLICATION_LINK_WAR=https://github.com/aulas-unisal/docker/blob/master/application_2/example.war
+    #   container_name: tomcat_app
+    #   hostname: tomcat_app
+    #   ports:
+    #     - "15200:8080"
+    #   networks: 
+    #       - unisal
+    #   tty: true
 
 networks: 
     unisal:
