--- a/application_2/Dockerfile
+++ b/application_2/Dockerfile
@@ -5,12 +5,13 @@ RUN  export DEBIAN_FRONTEND=noninteractive
 ENV  DEBIAN_FRONTEND noninteractive
 RUN  dpkg-divert --local --rename --add /sbin/initctl
 
-ENV APPLICATION_LINK_WAR https://github.com/aulas-unisal/docker/blob/master/application_2/example.war
+COPY application/webflix.war /usr/local/tomcat/webapps
+#ENV APPLICATION_LINK_WAR https://github.com/aulas-unisal/docker/blob/master/application_2/example.war
 
-RUN mkdir -p /tmp/resources
+#RUN mkdir -p /tmp/resources
 
-RUN wget ${APPLICATION_LINK_WAR} -P /tmp/resources \
-    # && unzip -c /tmp/resources/app.war \
-    && mv /tmp/resources/*.war /usr/local/tomcat/webapps
+#RUN wget ${APPLICATION_LINK_WAR} -P /tmp/resources \
+#    # && unzip -c /tmp/resources/app.war \
+#    && mv /tmp/resources/*.war /usr/local/tomcat/webapps
 
 EXPOSE 8080
